--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,10 @@
   body {
     @apply bg-background text-foreground;
 
-    @apply overflow-y-scroll;
+    @apply overflow-y-scroll overscroll-none;
+
+    &.disable-scroll {
+      @apply overflow-hidden;
+    }
   }
 }
